Prevent overflowing of project-members' avatars

--- a/pesticide_frontend/src/App.css
+++ b/pesticide_frontend/src/App.css
@@ -554,6 +554,7 @@ header.MuiAppBar-positionAbsolute {
   display: flex;
   align-items: center;
   justify-content: flex-start;
+  flex-flow: wrap;
 }
 
 .sidepanel-item-member-image {
